@@ -28,7 +28,7 @@ import static org.hosh.testsupport.ExitStatusAssert.assertThat;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import org.hosh.modules.TextModule.Count;
@@ -82,7 +82,7 @@ public class TextModuleTest {
 		@Test
 		public void empty() {
 			given(in.recv()).willReturn(Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("text"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("text"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -91,7 +91,7 @@ public class TextModuleTest {
 
 		@Test
 		public void noArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -103,7 +103,7 @@ public class TextModuleTest {
 		public void trimMissingKey() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("  abc  "));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.ERROR.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.ERROR.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -115,7 +115,7 @@ public class TextModuleTest {
 		public void trimKey() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("  abc  "));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.singleton(Keys.TEXT, Values.ofText("abc")));
@@ -127,7 +127,7 @@ public class TextModuleTest {
 		public void trimKeyOfDifferentType() {
 			Record record = Records.singleton(Keys.COUNT, Values.ofNumeric(42));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.COUNT.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.COUNT.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -154,7 +154,7 @@ public class TextModuleTest {
 		@Test
 		public void empty() {
 			given(in.recv()).willReturn(Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.COUNT.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.COUNT.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -165,7 +165,7 @@ public class TextModuleTest {
 		@Test
 		public void noArgs() {
 			given(in.recv()).willReturn(Optional.of(Records.singleton(Keys.NAME, Values.ofNumeric(1))), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.empty());
@@ -177,7 +177,7 @@ public class TextModuleTest {
 		public void oneArgKeepKey() {
 			Record record = Records.singleton(Keys.NAME, Values.ofText("foo"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.NAME.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.NAME.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).should().send(record);
@@ -189,7 +189,7 @@ public class TextModuleTest {
 		public void twoArgsIgnoreMissingKeys() {
 			Record record = Records.singleton(Keys.NAME, Values.ofText("foo"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.NAME.name(), Keys.COUNT.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.NAME.name(), Keys.COUNT.name()), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).should().send(record);
@@ -215,7 +215,7 @@ public class TextModuleTest {
 
 		@Test
 		public void noArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -224,7 +224,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name()), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name()), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -234,7 +234,7 @@ public class TextModuleTest {
 		@Test
 		public void twoArgsNoInput() {
 			given(in.recv()).willReturn(Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), " "), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), " "), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -246,7 +246,7 @@ public class TextModuleTest {
 		public void twoArgsMatching() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("a b c"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), " "), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), " "), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).should().send(Records.builder()
@@ -276,7 +276,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -285,7 +285,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("asd"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("asd"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -295,7 +295,7 @@ public class TextModuleTest {
 		@Test
 		public void twoArgsNoInput() {
 			given(in.recv()).willReturn(Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), "(?<id>\\\\d+)"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), "(?<id>\\\\d+)"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -307,7 +307,7 @@ public class TextModuleTest {
 		public void twoArgsNonMatching() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText(""));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), "(?<id>\\\\d+)"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), "(?<id>\\\\d+)"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -319,7 +319,7 @@ public class TextModuleTest {
 		public void twoArgsMatching() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("1"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), "(?<id>\\d+)"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), "(?<id>\\d+)"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).should().send(Records.singleton(Keys.of("id"), Values.ofText("1")));
@@ -331,7 +331,7 @@ public class TextModuleTest {
 		public void twoArgsMissingKey() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("1"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.COUNT.name(), "(?<id>\\d+)"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.COUNT.name(), "(?<id>\\d+)"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -360,7 +360,7 @@ public class TextModuleTest {
 		public void zeroArg() {
 			Record record = Records.singleton(Keys.COUNT, null).append(Keys.INDEX, null);
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.singleton(Keys.of("schema"), Values.ofText("count index")));
@@ -369,7 +369,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("asd"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("asd"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -399,7 +399,7 @@ public class TextModuleTest {
 		public void twoRecords() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.singleton(Keys.COUNT, Values.ofNumeric(2)));
@@ -411,7 +411,7 @@ public class TextModuleTest {
 		public void oneRecord() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.singleton(Keys.COUNT, Values.ofNumeric(1)));
@@ -421,7 +421,7 @@ public class TextModuleTest {
 		@Test
 		public void zeroRecords() {
 			given(in.recv()).willReturn(Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.singleton(Keys.COUNT, Values.ofNumeric(0)));
@@ -430,7 +430,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("asd"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("asd"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -460,7 +460,7 @@ public class TextModuleTest {
 		public void zeroArg() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.of(Records.empty()), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(Records.builder().entry(Keys.INDEX, Values.ofNumeric(1)).entry(Keys.TEXT, Values.ofText("some data")).build());
@@ -470,7 +470,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("asd"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("asd"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -500,7 +500,7 @@ public class TextModuleTest {
 		public void dropZero() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("0"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("0"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -512,7 +512,7 @@ public class TextModuleTest {
 		public void dropOne() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("1"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("1"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -521,7 +521,7 @@ public class TextModuleTest {
 
 		@Test
 		public void noArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -531,7 +531,7 @@ public class TextModuleTest {
 
 		@Test
 		public void negativeArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("-1"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("-1"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -557,7 +557,7 @@ public class TextModuleTest {
 
 		@Test
 		public void takeZero() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("0"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("0"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -569,7 +569,7 @@ public class TextModuleTest {
 		public void takeExactly() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("1"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("1"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -581,7 +581,7 @@ public class TextModuleTest {
 		public void takeLess() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("1"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("1"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -594,7 +594,7 @@ public class TextModuleTest {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some data"));
 			Record record2 = Records.singleton(Keys.TEXT, Values.ofText("another value"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("5"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("5"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -605,7 +605,7 @@ public class TextModuleTest {
 
 		@Test
 		public void negativeArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("-1"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("-1"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -614,7 +614,7 @@ public class TextModuleTest {
 
 		@Test
 		public void noArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(out).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -644,7 +644,7 @@ public class TextModuleTest {
 		public void printMatchingLines() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some string"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(Keys.TEXT.name(), ".*string.*"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(Keys.TEXT.name(), ".*string.*"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).should().send(record);
@@ -656,7 +656,7 @@ public class TextModuleTest {
 		public void ignoreNonMatchingLines() {
 			Record record = Records.singleton(Keys.TEXT, Values.ofText("some string"));
 			given(in.recv()).willReturn(Optional.of(record), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("key", ".*number.*"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("key", ".*number.*"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -665,7 +665,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveZeroInteractions();
@@ -675,7 +675,7 @@ public class TextModuleTest {
 
 		@Test
 		public void oneArg() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("key"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("key"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveZeroInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -709,7 +709,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("name"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("name"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -722,7 +722,7 @@ public class TextModuleTest {
 		public void sortByNonExistingKey() {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("anotherkey"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("anotherkey"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -732,7 +732,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -766,7 +766,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("anotherkey"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("anotherkey"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -780,7 +780,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("name"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("name"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -794,7 +794,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("name"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("name"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -804,7 +804,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -838,7 +838,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("anotherkey"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("anotherkey"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -852,7 +852,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(2));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("name"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("name"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -866,7 +866,7 @@ public class TextModuleTest {
 			Record record1 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			Record record2 = Records.singleton(Keys.NAME, Values.ofNumeric(1));
 			given(in.recv()).willReturn(Optional.of(record1), Optional.of(record2), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList("name"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("name"), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -876,7 +876,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveNoMoreInteractions();
@@ -909,7 +909,7 @@ public class TextModuleTest {
 		public void table() {
 			Record record1 = Records.builder().entry(Keys.COUNT, Values.ofNumeric(2)).entry(Keys.TEXT, Values.ofText("zvrnv")).build();
 			given(in.recv()).willReturn(Optional.of(record1), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -924,7 +924,7 @@ public class TextModuleTest {
 		public void tableWithNone() {
 			Record record1 = Records.builder().entry(Keys.COUNT, Values.none()).entry(Keys.TEXT, Values.ofText("zvrnv")).build();
 			given(in.recv()).willReturn(Optional.of(record1), Optional.empty());
-			ExitStatus exitStatus = sut.run(Arrays.asList(), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of(), in, out, err);
 			assertThat(exitStatus).isSuccess();
 			then(in).shouldHaveNoMoreInteractions();
 			then(err).shouldHaveNoMoreInteractions();
@@ -936,7 +936,7 @@ public class TextModuleTest {
 
 		@Test
 		public void zeroArgs() {
-			ExitStatus exitStatus = sut.run(Arrays.asList("a"), in, out, err);
+			ExitStatus exitStatus = sut.run(List.of("a"), in, out, err);
 			assertThat(exitStatus).isError();
 			then(in).shouldHaveNoMoreInteractions();
 			then(out).shouldHaveNoMoreInteractions();
