@@ -38,8 +38,8 @@ import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import org.hosh.runtime.ExternalCommand.ProcessFactory;
@@ -110,7 +110,7 @@ public class ExternalCommandTest {
 		ExitStatus exitStatus = sut.run(Collections.emptyList(), in, out, err);
 		assertThat(exitStatus).isSuccess();
 		then(processFactory).should().create(
-				Arrays.asList(executable.toString()),
+				List.of(executable.toString()),
 				Paths.get("."),
 				Collections.emptyMap(),
 				Position.SOLE);
@@ -131,7 +131,7 @@ public class ExternalCommandTest {
 		ExitStatus exitStatus = sut.run(Collections.singletonList("file.hosh"), in, out, err);
 		assertThat(exitStatus).isSuccess();
 		then(processFactory).should().create(
-				Arrays.asList(executable.toString(), "file.hosh"),
+				List.of(executable.toString(), "file.hosh"),
 				Paths.get("."),
 				Collections.emptyMap(),
 				Position.SOLE);
@@ -152,7 +152,7 @@ public class ExternalCommandTest {
 		ExitStatus exitStatus = sut.run(Collections.singletonList("file.hosh"), in, out, err);
 		assertThat(exitStatus).isError();
 		then(processFactory).should().create(
-				Arrays.asList(executable.toString(), "file.hosh"),
+				List.of(executable.toString(), "file.hosh"),
 				Paths.get("."),
 				Collections.emptyMap(),
 				Position.SOLE);
@@ -173,7 +173,7 @@ public class ExternalCommandTest {
 		ExitStatus exitStatus = sut.run(Collections.singletonList("file.hosh"), in, out, err);
 		assertThat(exitStatus).isError();
 		then(processFactory).should().create(
-				Arrays.asList(executable.toString(), "file.hosh"),
+				List.of(executable.toString(), "file.hosh"),
 				Paths.get("."),
 				Collections.emptyMap(),
 				Position.SOLE);
